--- a/index.html
+++ b/index.html
@@ -1,34 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link href="/css/index.css"  rel="stylesheet">
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
     <title>Mario Fernandez | Software Engineer</title>
 </head>
 
 <body>
     <header>
-        <div>
-            <img src="" alt="Picture of my Logo">
+        <div class="logo">
+            <img src="images/penrose-triangle.png" alt="Picture of my Logo">
         </div>
+
+        <div class="nav-cont">
         <nav>
             <a href="#">About</a> 
             <a href="#">Experience</a>
             <a href="#">Work</a>
             <a href="#">Contact</a>
-            <a href="#">Resume</a>
         </nav>
+        <div >
+        <button class="resume-btn" href="#">Resume</button>
+        </div>
+        </div>
     </header>
 
     <div class= "intro">
         <div>
             <h2>Hi, my name is</h2>
             <h1>Mario Fernandez</h1>
-            <h2>I make and shape websites for the web.</h2>
+            <h2>I make and shape websites for the internet.</h2>
         </div>
         <div>
-            <p>Living in Atlanta, GA, I'm a full-time student at Lambda specializing in Web Development building special websites for the whole world.</p>
+            <p>I'm a web dev student based in Atlanta, GA focused on building exceptional, high-quality websites and applications.</p>
         </div>
         <div class="button">
             <button>Get in Touch</button>
